--- a/langs/fr_FR/iosystems.lang
+++ b/langs/fr_FR/iosystems.lang
@@ -20,7 +20,7 @@
 # Module label 'ModuleiosystemsName'
 ModuleiosystemsName = iosystems
 # Module description 'ModuleiosystemsDesc'
-ModuleiosystemsDesc = Description de iosystems
+ModuleiosystemsDesc = un module pour personaliser l'utilisation de dolibarr pour IO Systems
 
 #
 # Page d'administration
@@ -39,10 +39,13 @@ iosystemsAboutPage = Page à propos de iosystems
 #
 # Page d'exemple
 #
-MyPageName = Nom de ma page
+# MyPageName = Nom de ma page
 
 #
 # Box d'exemple
 #
-MyWidget = Mon widget
-MyWidgetDescription = Description de mon widget
+# MyWidget = Mon widget
+# MyWidgetDescription = Description de mon widget
+
+BudgetProposal = Proposition budgétaire
+
